# sven

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: SvenConfig.cmake.in
demos/: README.md
demos/pong/: pong.cpp
docs/: getting-started.md
examples/: audio.cpp  hello.cpp  movement.cpp  sprite.cpp
include/: sven.h
src/: audio.cpp  core.cpp  graphics.cpp  input.cpp  sven_internal.h  texture.cpp  window.cpp
tests/: sven_test.h  test_rect.cpp  test_resource_failure.cpp  test_vec2.cpp
